# newpage_solutions

./: README.md  architecture.md
meeting-intelligence/: .env.example  .gitignore  Dockerfile  Dockerfile.demo  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
meeting-intelligence/app/: api.py  config.py  factory.py  interfaces.py  logging_config.py  models.py
meeting-intelligence/app/generation/: aggregate.py  answerer.py  conversation.py  llm.py
meeting-intelligence/app/ingestion/: chunker.py  extractor.py  item_store.py  parser.py  pipeline.py  redactor.py  timestamps.py
meeting-intelligence/app/retrieval/: embedder.py  planner.py  reranker.py  retriever.py  vector_store.py
meeting-intelligence/app/transcription/: transcriber.py
meeting-intelligence/data/transcripts/: hiring_sync.txt  incident_retro_2026-06-05_1015.txt  product_planning.txt
meeting-intelligence/docs/: architecture.md
meeting-intelligence/eval/: evaluate.py  gold_set.json
meeting-intelligence/scripts/: seed.py
meeting-intelligence/tests/: test_chunker.py  test_conversation.py  test_extraction_and_aggregation.py  test_meeting_brief.py  test_parser.py  test_redactor.py  test_retrieval_and_api.py  test_timestamps.py  test_two_stage_retrieval.py
meeting-intelligence/ui/: streamlit_app.py
