[project]
name = "meeting-intelligence"
version = "0.1.0"
description = "A grounded, cited RAG assistant over meeting transcripts."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
# Real reranker + hosted LLMs. Not needed to run the demo (echo + noop defaults).
rerank = ["cohere>=5.5"]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.25"]
# UI is a separate client; voice needs the mic recorder component.
ui = ["streamlit>=1.34", "requests>=2.31", "streamlit-mic-recorder>=0.0.8"]
# Better PII detection (names-in-context) than the regex baseline.
pii = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: calling Depends() in argument defaults is the intended FastAPI idiom.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
